1.0.10 --Async blocking, 1 threaad of scripts, presses and mixes-- Now KernelBot will run a Singleton thread for async tasks. The singleton thread self destructs upon finishing all tasks, allowing the main thread to initiate another async thread. The main thread can still respond and do sync tasks. Sadly due to the way the function map works and my desire to have ?press, for example, work as both a way to get the press menu and a way to free press ?press ctrl+f1 it means that the ?press menu is also considered an async task. This would be fine except when the bot's async thread is busy it will also not show menus for async tasks. I'd like to get around this, but it may force me to rename all help menus pressH or something like that. Lots of ways to solve it, but none that make me happy right now.