@@ -5,11 +5,11 @@ import jPlus.lang.SystemUtils;
 import java.io.IOException;
 
 public class RuntimeUtils {
-    protected static boolean exec(String body) throws IOException {
+    protected static boolean exec(String... body) throws IOException {
         return Runtime.getRuntime().exec(body).isAlive();
     }
 
-    public static boolean execBliss(String body) {
+    public static boolean execBliss(String... body) {
         try {
             return exec(body);
         } catch (IOException e) {
@@ -19,37 +19,13 @@ public class RuntimeUtils {
         return false;
     }
 
-    protected static void execWait(String body) throws IOException, InterruptedException {
-        Runtime.getRuntime().exec(body).waitFor();
+    public static void execWait(String... process) throws IOException, InterruptedException {
+        ProcessBuilder pb = new ProcessBuilder(process);
+        Process startProcess = pb.inheritIO().start();
+        startProcess.waitFor();
     }
 
-    public static void execWaitBliss(String body) {
-        try {
-            execWait(body);
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
-    }
-
-    protected static boolean exec(String[] body) throws IOException {
-        return Runtime.getRuntime().exec(body).isAlive();
-    }
-
-    public static boolean execBliss(String[] body) {
-        try {
-            return exec(body);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
-        return false;
-    }
-
-    protected static void execWait(String[] body) throws IOException, InterruptedException {
-        Runtime.getRuntime().exec(body).waitFor();
-    }
-
-    public static void execWaitBliss(String[] body) {
+    public static void execWaitBliss(String... body) {
         try {
             execWait(body);
         } catch (IOException | InterruptedException e) {
@@ -59,14 +35,12 @@ public class RuntimeUtils {
 
     //***************************************************************//
 
-    public static String cmdStartString(String path){
+    public static String cmdStartString(String path) {
         return "cmd.exe /c start \"\" \"" + path + "\"";
     }
 
-    static void waitForProcess(String... process) throws IOException, InterruptedException {
-        ProcessBuilder pb = new ProcessBuilder(process);
-        Process startProcess = pb.inheritIO().start();
-        startProcess.waitFor();
+    public static String[] cmdWaitStringArr(String path) {
+        return new String[]{"cmd", "/c", "start", "/wait", "\"\"", "\"" + path + "\""};
     }
 
     //***************************************************************//
@@ -96,16 +70,16 @@ public class RuntimeUtils {
     }
 
     private static boolean webLin(String url) {
-        String[] browsers = {"google-chrome", "firefox", "mozilla", "epiphany", "konqueror",
+        final String[] browsers = {"google-chrome", "firefox", "mozilla", "epiphany", "konqueror",
                 "netscape", "opera", "links", "lynx"};
 
-        StringBuffer cmd = new StringBuffer();
+        final StringBuilder cmd = new StringBuilder();
         for (int i = 0; i < browsers.length; i++)
             if (i == 0) cmd.append(String.format("%s \"%s\"", browsers[i], url));
             else cmd.append(String.format(" || %s \"%s\"", browsers[i], url));
         // If the first didn't work, try the next browser and so on
 
-        return execBliss(new String[]{"sh", "-c", cmd.toString()});
+        return execBliss("sh", "-c", cmd.toString());
     }
 
     private static boolean webWin(String url) {
